Bug fix z-index

--- a/handheld.css
+++ b/handheld.css
@@ -29,7 +29,7 @@ div#leftcontent:not(.treeleftcontent) {
 	width: auto;
 	padding: 10px;
 	border-top-left-radius: 0px;
-	z-index:10;
+	z-index:100;
 }
 
 span.instronly {
